Fixed: <x-stepper> inside <x-numberinput> is too large

--- a/themes/base.css
+++ b/themes/base.css
@@ -1380,9 +1380,6 @@ x-numberinput[size="small"] {
 x-numberinput[size="large"] {
   height: 38px;
 }
-x-numberinput:not([condensed])[hasstepper] {
-  margin-right: 18px;
-}
 x-numberinput:focus {
   z-index: 10;
 }
