--- a/themes/fluent-dark.css
+++ b/themes/fluent-dark.css
@@ -1305,6 +1305,9 @@ x-numberinput {
   border-radius: 3px;
   line-height: 1.5;
 }
+x-numberinput:focus:has(x-stepper) {
+  padding-right: 16px; /* Stepper width */
+}
 x-numberinput:hover {
   background-color: color(srgb 1 1 1 / 0.0737);
 }
@@ -1346,26 +1349,34 @@ x-numberinput > x-label {
 
 /* Stepper */
 x-numberinput > x-stepper {
-  margin: 0 -20px 0 0;
-}
-x-numberinput:focus > x-stepper {
-  transform: scale(1);
-  z-index: 1;
-}
-x-numberinput:not(:focus) > x-stepper {
-  height: 20px;
-  margin: 0;
-  transform: scale(0.8);
-  transform-origin: 100% 50%;
+  width: 16px;
+  height: 11px;
+  padding: 0;
+  transform: translateX(-2px);
   background-color: transparent;
   border-width: 0;
   pointer-events: none;
+}
+x-numberinput:focus > x-stepper {
+  position: absolute;
+  right: -12px;
+  width: 26px;
+  height: 52px;
+  padding: 2px;
+  z-index: 1;
+  color: color(srgb 1 1 1 / 0.786);
+  background-color: color(srgb 0.17 0.18 0.18);
+  border-width: 1px;
+  border-style: solid;
+  border-color: var(--border-color);
+  border-radius: 7px;
+  pointer-events: all;
 }
 x-numberinput[size="small"]:not(:focus) > x-stepper {
   transform: scale(0.6);
 }
 x-numberinput[size="large"]:not(:focus) > x-stepper {
-  transform: scale(0.9);
+  transform: scale(1.1) translateX(-2px);
 }
 x-numberinput:not(:focus) > x-stepper::part(increment-button),
 x-numberinput:not(:focus) > x-stepper::part(decrement-button) {
